--- a/algorithm_traning.ipynb
+++ b/algorithm_traning.ipynb
@@ -121,6 +121,87 @@
     "\n",
     "print(bubbleSort(bubble_arry))"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 선택 정렬 (SelectionSort)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[150, 160, 170, 180, 190]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def selection_sort(array):\n",
+    "    for i in range(len(array)-1):\n",
+    "        min_idx = i\n",
+    "\n",
+    "        for j in range(i+1, len(array)):\n",
+    "            if array[j] < array[min_idx]:\n",
+    "                min_idx = j\n",
+    "                \n",
+    "        array[i], array[min_idx] = array[min_idx], array[i]\n",
+    "\n",
+    "    return array\n",
+    "\n",
+    "height = [190, 170, 150, 160, 180]\n",
+    "print(selection_sort(height))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.4999330788850784e-06\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import timeit\n",
+    "\n",
+    "def time_decorator(func):\n",
+    "\n",
+    "    def exec_func(*args, **kwargs):\n",
+    "        start_time = timeit.default_timer()\n",
+    "        result = func(*args, **kwargs)\n",
+    "        print(timeit.default_timer() - start_time)\n",
+    "        return result\n",
+    "    return exec_func\n",
+    "\n",
+    "@time_decorator\n",
+    "def selection_sort(array):\n",
+    "    for i in range(len(array)-1):\n",
+    "        min_idx = i\n",
+    "\n",
+    "        for j in range(i+1, len(array)):\n",
+    "            if array[j] < array[min_idx]:\n",
+    "                min_idx = j\n",
+    "                \n",
+    "        array[i], array[min_idx] = array[min_idx], array[i]\n",
+    "\n",
+    "    return array\n",
+    "\n",
+    "select_arry = [10, 1, 9, 2, 8, 3, 7, 4, 6, 5]\n",
+    "print(selection_sort(select_arry))"
+   ]
   }
  ],
  "metadata": {
@@ -139,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0 (main, Oct 25 2022, 13:57:33) [Clang 14.0.0 (clang-1400.0.29.202)]"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
