[Tech Knowledge] [거품정렬 추가 학습] 23-02-24

--- a/algorithm_traning.ipynb
+++ b/algorithm_traning.ipynb
@@ -127,6 +127,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 추가 학습"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "bubble_arry = [3, 5, 1, 2, 4]\n",
+    "\n",
+    "# j loop를 돌때 j에 대한 범위를 i만큼 제외하며 loop를 돌리는 코드\n",
+    "def bubble_sort1(arry):\n",
+    "    length = len(arry)-1\n",
+    "\n",
+    "    for i in range(length):\n",
+    "        for j in range(length-i):\n",
+    "            if arry[j] > arry[j+1]:\n",
+    "                arry[j], arry[j+1] = arry[j+1], arry[j]\n",
+    "    return arry\n",
+    "\n",
+    "# i loop를 돌리때 i의 범위를 줄어들게 설정해논 후 j의 범위를 i길이 만큼 돌리는 코드\n",
+    "def bubble_sort2(arry):\n",
+    "    length = len(arry)-1\n",
+    "\n",
+    "    for i in range(length, 0, -1):\n",
+    "        for j in range(i):\n",
+    "            if arry[j] > arry[j+1]:\n",
+    "                arry[j], arry[j+1] = arry[j+1], arry[j]\n",
+    "    return arry\n",
+    "\n",
+    "print(bubble_sort2(bubble_arry))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 선택 정렬 (SelectionSort)"
    ]
   },
