--- a/algorithm_traning.ipynb
+++ b/algorithm_traning.ipynb
@@ -249,6 +249,63 @@
     "select_arry = [10, 1, 9, 2, 8, 3, 7, 4, 6, 5]\n",
     "print(selection_sort(select_arry))"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 추가 학습"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 5\n",
+      "2 3\n",
+      "3 1\n",
+      "4 2\n",
+      "-----------\n",
+      "2 3\n",
+      "3 4\n",
+      "4 2\n",
+      "-----------\n",
+      "3 4\n",
+      "4 5\n",
+      "-----------\n",
+      "4 5\n",
+      "-----------\n",
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "selection_array = [4, 5, 3, 1, 2]\n",
+    "length = len(selection_array)-1\n",
+    "\n",
+    "for i in range(length):\n",
+    "    min_idx = i\n",
+    "    for j in range(i+1, length+1):\n",
+    "        print(j, selection_array[j])\n",
+    "        if selection_array[j] < selection_array[min_idx]:\n",
+    "            min_idx = j\n",
+    "    selection_array[i], selection_array[min_idx] = selection_array[min_idx], selection_array[i]\n",
+    "    print('-----------')\n",
+    "print(selection_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
