[Tech Knowledge] [해시(Hash) 기초 학습] 23-02-24

--- a/algorithm_traning.ipynb
+++ b/algorithm_traning.ipynb
@@ -301,11 +301,436 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 해시(Hash)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n",
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 딕셔너리 생성하기\n",
+    "init_dict1 = {}\n",
+    "init_dict2 = dict()\n",
+    "\n",
+    "print(init_dict1)\n",
+    "print(init_dict2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': '조OO', 'age': 32, 'marital': False, 'height': 183}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Key-Value쌍을 가지는 특정 dictionary 선언\n",
+    "Lagom = {\n",
+    "    'name' : '조OO',\n",
+    "    'age' : 32,\n",
+    "    'marital' : False,\n",
+    "    'height' : 183,\n",
+    "}\n",
+    "\n",
+    "Lagom\n",
+    "'''\n",
+    "{'name': '조OO', 'age': 32, 'marital': False, 'height': 183}\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': '조OO',\n",
+       " 'age': 32,\n",
+       " 'marital': False,\n",
+       " 'height': 183,\n",
+       " 'Friend': {'Jinho', 'MinWook'}}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# dictionary를 value로 가지는 dictionary 선언\n",
+    "Lagom = {\n",
+    "    'name' : '조OO',\n",
+    "    'age' : 32,\n",
+    "    'marital' : False,\n",
+    "    'height' : 183,\n",
+    "    'Friend' : {\n",
+    "        'MinWook',\n",
+    "        'Jinho'\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Lagom\n",
+    "'''\n",
+    "{'name': '조OO',\n",
+    " 'age': 32,\n",
+    " 'marital': False,\n",
+    " 'height': 183,\n",
+    " 'Friend': {'Jinho', 'MinWook'}}\n",
+    "'''\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'조OO'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# [] 기호로 원소 가져오기\n",
+    "Lagom = {\n",
+    "    'name' : '조OO',\n",
+    "    'age' : 32,\n",
+    "    'marital' : False,\n",
+    "    'height' : 183,\n",
+    "    'Friend' : {\n",
+    "        'MinWook',\n",
+    "        'Jinho'\n",
+    "    }\n",
+    "}\n",
+    "Lagom['name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get 메소드로 원소 가져오기\n",
+    "# 딕셔너리에 해당 key가 없는 경우 error를 발생하는 대신 특정 값을 가져오게 하기\n",
+    "Lagom = {\n",
+    "    'name' : '조OO',\n",
+    "    'age' : 32,\n",
+    "    'marital' : False,\n",
+    "    'height' : 183,\n",
+    "    'Friend' : {\n",
+    "        'MinWook',\n",
+    "        'Jinho'\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Lagom.get('weight', 80)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': '조OO',\n",
+       " 'age': 32,\n",
+       " 'marital': False,\n",
+       " 'height': 183,\n",
+       " 'Friend': {'Jinho', 'MinWook'},\n",
+       " 'weight': 80}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 값 넣기\n",
+    "Lagom = {\n",
+    "    'name' : '조OO',\n",
+    "    'age' : 32,\n",
+    "    'marital' : False,\n",
+    "    'height' : 183,\n",
+    "    'Friend' : {\n",
+    "        'MinWook',\n",
+    "        'Jinho'\n",
+    "    }\n",
+    "}\n",
+    "Lagom['weight'] = 80\n",
+    "Lagom"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': '박OO',\n",
+       " 'age': 32,\n",
+       " 'marital': False,\n",
+       " 'height': 183,\n",
+       " 'Friend': {'Jinho', 'MinWook'}}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 값 수정\n",
+    "Lagom = {\n",
+    "    'name' : '조OO',\n",
+    "    'age' : 32,\n",
+    "    'marital' : False,\n",
+    "    'height' : 183,\n",
+    "    'Friend' : {\n",
+    "        'MinWook',\n",
+    "        'Jinho'\n",
+    "    }\n",
+    "}\n",
+    "Lagom['name'] = '박OO'\n",
+    "Lagom\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'age': 32, 'marital': False, 'height': 183, 'Friend': {'Jinho', 'MinWook'}}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# del 이용하기 - 키가 있는 경우\n",
+    "Lagom = {\n",
+    "    'name' : '조OO',\n",
+    "    'age' : 32,\n",
+    "    'marital' : False,\n",
+    "    'height' : 183,\n",
+    "    'Friend' : {\n",
+    "        'MinWook',\n",
+    "        'Jinho'\n",
+    "    }\n",
+    "}\n",
+    "del Lagom['name']\n",
+    "\n",
+    "Lagom"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'weight'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [14], line 11\u001b[0m\n\u001b[1;32m      1\u001b[0m Lagom \u001b[39m=\u001b[39m {\n\u001b[1;32m      2\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mname\u001b[39m\u001b[39m'\u001b[39m : \u001b[39m'\u001b[39m\u001b[39m조OO\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m      3\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mage\u001b[39m\u001b[39m'\u001b[39m : \u001b[39m32\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      9\u001b[0m     }\n\u001b[1;32m     10\u001b[0m }\n\u001b[0;32m---> 11\u001b[0m \u001b[39mdel\u001b[39;00m Lagom[\u001b[39m'\u001b[39;49m\u001b[39mweight\u001b[39;49m\u001b[39m'\u001b[39;49m]\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'weight'"
+     ]
+    }
+   ],
+   "source": [
+    "Lagom = {\n",
+    "    'name' : '조OO',\n",
+    "    'age' : 32,\n",
+    "    'marital' : False,\n",
+    "    'height' : 183,\n",
+    "    'Friend' : {\n",
+    "        'MinWook',\n",
+    "        'Jinho'\n",
+    "    }\n",
+    "}\n",
+    "del Lagom['weight']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# pop 이용하기 - 키가 있는 경우 대응하는 value 리턴\n",
+    "Lagom = {\n",
+    "    'name' : '조OO',\n",
+    "    'age' : 32,\n",
+    "    'marital' : False,\n",
+    "    'height' : 183,\n",
+    "    'Friend' : {\n",
+    "        'MinWook',\n",
+    "        'Jinho'\n",
+    "    }\n",
+    "}\n",
+    "Lagom.pop('age', 18)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# pop 이용하기 - 키가 없는 경우 대응하는 default 리턴\n",
+    "Lagom = {\n",
+    "    'name' : '조OO',\n",
+    "    'age' : 32,\n",
+    "    'marital' : False,\n",
+    "    'height' : 183,\n",
+    "    'Friend' : {\n",
+    "        'MinWook',\n",
+    "        'Jinho'\n",
+    "    }\n",
+    "}\n",
+    "Lagom.pop('weight', 18)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name\n",
+      "age\n",
+      "marital\n",
+      "height\n",
+      "Friend\n"
+     ]
+    }
+   ],
+   "source": [
+    "Lagom = {\n",
+    "    'name' : '조OO',\n",
+    "    'age' : 32,\n",
+    "    'marital' : False,\n",
+    "    'height' : 183,\n",
+    "    'Friend' : {\n",
+    "        'MinWook',\n",
+    "        'Jinho'\n",
+    "    }\n",
+    "}\n",
+    "for key in Lagom:\n",
+    "    print(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name 조OO\n",
+      "age 32\n",
+      "marital False\n",
+      "height 183\n",
+      "Friend {'Jinho', 'MinWook'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "Lagom = {\n",
+    "    'name' : '조OO',\n",
+    "    'age' : 32,\n",
+    "    'marital' : False,\n",
+    "    'height' : 183,\n",
+    "    'Friend' : {\n",
+    "        'MinWook',\n",
+    "        'Jinho'\n",
+    "    }\n",
+    "}\n",
+    "for key, value in Lagom.items():\n",
+    "    print(key, value)"
+   ]
   }
  ],
  "metadata": {
