[Tech Knowledge] [삽입 정렬(Insertion Sort) 학습] 23-03-05 - 삽입정렬 학습 내용 블로그 정리 - 삽입정렬 관련 GIT 이미지 추가

--- a/traning.ipynb
+++ b/traning.ipynb
@@ -10,17 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4, 5]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bubble_arry = [3, 2, 4, 5, 1]\n",
     "length = len(bubble_arry)-1\n",
@@ -36,18 +28,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9.540999599266797e-06\n",
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import timeit\n",
     "\n",
@@ -78,18 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7.375005225185305e-06\n",
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import timeit\n",
     "\n",
@@ -132,17 +106,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4, 5]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bubble_arry = [3, 5, 1, 2, 4]\n",
     "\n",
@@ -179,17 +145,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[150, 160, 170, 180, 190]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def selection_sort(array):\n",
     "    for i in range(len(array)-1):\n",
@@ -209,18 +167,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6.4999330788850784e-06\n",
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import timeit\n",
     "\n",
@@ -260,31 +209,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 5\n",
-      "2 3\n",
-      "3 1\n",
-      "4 2\n",
-      "-----------\n",
-      "2 3\n",
-      "3 4\n",
-      "4 2\n",
-      "-----------\n",
-      "3 4\n",
-      "4 5\n",
-      "-----------\n",
-      "4 5\n",
-      "-----------\n",
-      "[1, 2, 3, 4, 5]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "selection_array = [4, 5, 3, 1, 2]\n",
     "length = len(selection_array)-1\n",
@@ -310,18 +237,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{}\n",
-      "{}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 딕셔너리 생성하기\n",
     "init_dict1 = {}\n",
@@ -333,20 +251,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': '조OO', 'age': 32, 'marital': False, 'height': 183}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Key-Value쌍을 가지는 특정 dictionary 선언\n",
     "Lagom = {\n",
@@ -364,24 +271,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': '조OO',\n",
-       " 'age': 32,\n",
-       " 'marital': False,\n",
-       " 'height': 183,\n",
-       " 'Friend': {'Jinho', 'MinWook'}}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# dictionary를 value로 가지는 dictionary 선언\n",
     "Lagom = {\n",
@@ -407,20 +299,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'조OO'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# [] 기호로 원소 가져오기\n",
     "Lagom = {\n",
@@ -438,20 +319,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "80"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# get 메소드로 원소 가져오기\n",
     "# 딕셔너리에 해당 key가 없는 경우 error를 발생하는 대신 특정 값을 가져오게 하기\n",
@@ -471,25 +341,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': '조OO',\n",
-       " 'age': 32,\n",
-       " 'marital': False,\n",
-       " 'height': 183,\n",
-       " 'Friend': {'Jinho', 'MinWook'},\n",
-       " 'weight': 80}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 값 넣기\n",
     "Lagom = {\n",
@@ -508,24 +362,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': '박OO',\n",
-       " 'age': 32,\n",
-       " 'marital': False,\n",
-       " 'height': 183,\n",
-       " 'Friend': {'Jinho', 'MinWook'}}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 값 수정\n",
     "Lagom = {\n",
@@ -544,20 +383,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'age': 32, 'marital': False, 'height': 183, 'Friend': {'Jinho', 'MinWook'}}"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# del 이용하기 - 키가 있는 경우\n",
     "Lagom = {\n",
@@ -577,21 +405,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'weight'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [14], line 11\u001b[0m\n\u001b[1;32m      1\u001b[0m Lagom \u001b[39m=\u001b[39m {\n\u001b[1;32m      2\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mname\u001b[39m\u001b[39m'\u001b[39m : \u001b[39m'\u001b[39m\u001b[39m조OO\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m      3\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mage\u001b[39m\u001b[39m'\u001b[39m : \u001b[39m32\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      9\u001b[0m     }\n\u001b[1;32m     10\u001b[0m }\n\u001b[0;32m---> 11\u001b[0m \u001b[39mdel\u001b[39;00m Lagom[\u001b[39m'\u001b[39;49m\u001b[39mweight\u001b[39;49m\u001b[39m'\u001b[39;49m]\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'weight'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Lagom = {\n",
     "    'name' : '조OO',\n",
@@ -608,20 +424,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "32"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pop 이용하기 - 키가 있는 경우 대응하는 value 리턴\n",
     "Lagom = {\n",
@@ -639,20 +444,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "18"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pop 이용하기 - 키가 없는 경우 대응하는 default 리턴\n",
     "Lagom = {\n",
@@ -670,21 +464,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "name\n",
-      "age\n",
-      "marital\n",
-      "height\n",
-      "Friend\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Lagom = {\n",
     "    'name' : '조OO',\n",
@@ -702,21 +484,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "name 조OO\n",
-      "age 32\n",
-      "marital False\n",
-      "height 183\n",
-      "Friend {'Jinho', 'MinWook'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Lagom = {\n",
     "    'name' : '조OO',\n",
@@ -742,19 +512,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1111, 2222, 3333, 4444, 0, 0, 0]\n",
-      "4444\n",
-      "[0, 1111, 2222, 3333, 0, 0, 0, 0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class HashTable:\n",
     "    def __init__(self, table_size):\n",
@@ -816,22 +576,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "ord() expected a character, but string of length 2 found",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [4], line 36\u001b[0m\n\u001b[1;32m     33\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m     35\u001b[0m \u001b[39m# test1\u001b[39;00m\n\u001b[0;32m---> 36\u001b[0m \u001b[39mprint\u001b[39m(get_key(\u001b[39m'\u001b[39;49m\u001b[39mDA\u001b[39;49m\u001b[39m'\u001b[39;49m), get_key(\u001b[39m'\u001b[39m\u001b[39mLan\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[1;32m     38\u001b[0m save_data(\u001b[39m'\u001b[39m\u001b[39mDA\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m0101234567\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     39\u001b[0m save_data(\u001b[39m'\u001b[39m\u001b[39mLan\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m0102582582\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "Cell \u001b[0;32mIn [4], line 4\u001b[0m, in \u001b[0;36mget_key\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_key\u001b[39m(data):\n\u001b[0;32m----> 4\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mord\u001b[39;49m(data)\n",
-      "\u001b[0;31mTypeError\u001b[0m: ord() expected a character, but string of length 2 found"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "hash_table = list([0 for i in range(8)])\n",
     "\n",
@@ -896,24 +643,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1111\n",
-      "97\n",
-      "97\n",
-      "[0, [['aa', '1111'], ['ab', '2222']], 0, 0, 0, 0, 0, 0]\n",
-      "1111\n",
-      "2222\n",
-      "[0, [['ab', '2222']], 0, 0, 0, 0, 0, 0]\n",
-      "False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Chaining:\n",
     "    def __init__(self, table_size):\n",
@@ -1009,20 +741,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "97 97\n",
-      "[0, ['aa', '1111'], ['ab', '2222'], 0, 0, 0, 0, 0]\n",
-      "2222\n",
-      "[0, 0, ['ab', '2222'], 0, 0, 0, 0, 0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class OpenAddressing:\n",
     "    def __init__(self, table_size):\n",
@@ -1093,6 +814,164 @@
     "\n",
     "    h_table.delete('aa') \n",
     "    print(h_table.hash_table)  # [0, 0, ['ab', '2222'], 0, 0, 0, 0, 0]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 삽입 정렬(Insertion Sort)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array = [3, 2, 1, 6, 5, 4, 9, 8, 7]\n",
+    "\n",
+    "for end in range(1, len(array)):\n",
+    "    for i in range(end, 0, -1):\n",
+    "        if array[i-1] > array[i]:\n",
+    "            array[i-1], array[i] = array[i], array[i-1]\n",
+    "\n",
+    "print(array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array = [3, 2, 1, 6, 5, 4, 9, 8, 7]\n",
+    "\n",
+    "for end in range(1, len(array)):\n",
+    "    i = end\n",
+    "    while i > 0 and array[i-1] > array[i]:\n",
+    "        array[i-1], array[i] = array[i], array[i-1]\n",
+    "        i -= 1\n",
+    "\n",
+    "print(array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array = [3, 2, 1, 6, 5, 4, 9, 8, 7]\n",
+    "\n",
+    "for end in range(1, len(array)):\n",
+    "    to_insert = array[end]\n",
+    "    i = end\n",
+    "    while i > 0 and array[i -1] > to_insert:\n",
+    "        array[i] = array[i -1]\n",
+    "        i -= 1\n",
+    "    array[i] = to_insert\n",
+    "\n",
+    "print(array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 퀵 정렬(Quick Sort)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def quick_sort(arry):\n",
+    "    if len(arry) <= 1:\n",
+    "        return arry\n",
+    "    pivot = arry[len(arry)//2]\n",
+    "    less_arry, equal_arry, greater_arry = [], [], []\n",
+    "\n",
+    "    for num in arry:\n",
+    "        if num < pivot:\n",
+    "            less_arry.append(num)\n",
+    "        elif num > pivot:\n",
+    "            greater_arry.append(num)\n",
+    "        else:\n",
+    "            equal_arry.append(num)\n",
+    "    return quick_sort(less_arry) + equal_arry + quick_sort(greater_arry)\n",
+    "\n",
+    "array = [1, 2, 3, 6, 5, 4, 9, 8, 7]\n",
+    "print(quick_sort(array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "4\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def quick_sort(arry):\n",
+    "    def sort(low, high):\n",
+    "        if high <= low:\n",
+    "            return\n",
+    "        \n",
+    "        mid = partition(low, high)\n",
+    "        sort(low, mid-1)\n",
+    "        sort(mid, high)\n",
+    "\n",
+    "    def partition(low, high):\n",
+    "        pivot = arry[(low+high) // 2]\n",
+    "        while low <= high:\n",
+    "            while arry[low] < pivot:\n",
+    "                low +=1\n",
+    "            while arry[high] > pivot:\n",
+    "                high -=1\n",
+    "            if low <= high:\n",
+    "                arry[low], arry[high] = arry[high], arry[low]\n",
+    "                low, high = low + 1, high -1\n",
+    "        return low\n",
+    "\n",
+    "    return sort(0, len(arry)-1)\n",
+    "\n",
+    "array = [1, 8, 3, 6, 5, 4, 9, 2, 7]\n",
+    "quick_sort(array)\n",
+    "print(array)"
    ]
   },
   {
