[Tech Knowledge] [병합정렬(Merge Sort) 학습 및 내용 정리] 23-03-07

--- a/traning.ipynb
+++ b/traning.ipynb
@@ -106,11 +106,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
    "source": [
-    "bubble_arry = [3, 5, 1, 2, 4]\n",
+    "array = [9, 1, 8, 2, 7, 3, 6, 4, 5]\n",
     "\n",
     "# j loop를 돌때 j에 대한 범위를 i만큼 제외하며 loop를 돌리는 코드\n",
     "def bubble_sort1(arry):\n",
@@ -132,7 +140,17 @@
     "                arry[j], arry[j+1] = arry[j+1], arry[j]\n",
     "    return arry\n",
     "\n",
-    "print(bubble_sort2(bubble_arry))"
+    "print(bubble_sort2(array))\n",
+    "\n",
+    "length = len(array)\n",
+    "\n",
+    "# 복습할때 나온 코드 (비슷하지만 비교하는 index가 다름)\n",
+    "for i in range(length, 0, -1):\n",
+    "    for j in range(1, i):\n",
+    "        if array[j-1] > array[j]:\n",
+    "            array[j-1], array[j] = array[j], array[j-1]\n",
+    "\n",
+    "print(array)"
    ]
   },
   {
@@ -209,9 +227,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "selection_array = [4, 5, 3, 1, 2]\n",
     "length = len(selection_array)-1\n",
@@ -219,12 +246,23 @@
     "for i in range(length):\n",
     "    min_idx = i\n",
     "    for j in range(i+1, length+1):\n",
-    "        print(j, selection_array[j])\n",
     "        if selection_array[j] < selection_array[min_idx]:\n",
     "            min_idx = j\n",
     "    selection_array[i], selection_array[min_idx] = selection_array[min_idx], selection_array[i]\n",
-    "    print('-----------')\n",
-    "print(selection_array)"
+    "print(selection_array)\n",
+    "\n",
+    "# 복습시 나온 코드\n",
+    "array = [9, 1, 8, 2, 7, 3, 6, 4, 5]\n",
+    "length = len(array)\n",
+    "\n",
+    "for i in range(length):\n",
+    "    min_index = i\n",
+    "    for j in range(i+1, length):\n",
+    "        if array[j] < array[min_index]:\n",
+    "            min_index = j\n",
+    "    array[i], array[min_index] = array[min_index], array[i]\n",
+    "\n",
+    "print(array)"
    ]
   },
   {
@@ -972,6 +1010,109 @@
     "array = [1, 8, 3, 6, 5, 4, 9, 2, 7]\n",
     "quick_sort(array)\n",
     "print(array)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 병합 정렬(Merge Sort)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def merge_sort(arry):\n",
+    "    if len(arry) < 2:\n",
+    "        return arry\n",
+    "    \n",
+    "    mid = len(arry) // 2\n",
+    "    low_arry = merge_sort(arry[:mid])\n",
+    "    high_arry = merge_sort(arry[mid:])\n",
+    "\n",
+    "    merged_arry = []\n",
+    "\n",
+    "    l = h = 0\n",
+    "    while l < len(low_arry) and h < len(high_arry):\n",
+    "        if low_arry[l] < high_arry[h]:\n",
+    "            merged_arry.append(low_arry[l])\n",
+    "            l += 1\n",
+    "        else:\n",
+    "            merged_arry.append(high_arry[h])\n",
+    "            h += 1\n",
+    "    merged_arry += low_arry[l:]\n",
+    "    merged_arry += high_arry[h:]\n",
+    "\n",
+    "    return merged_arry\n",
+    "\n",
+    "array = [0, 1, 9, 2, 8, 3, 7, 4, 6, 5]\n",
+    "print(merge_sort(array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def merge_sort(arry):\n",
+    "    def sort(low, high):\n",
+    "        if high - low < 2:\n",
+    "            return\n",
+    "        \n",
+    "        mid = (low + high) // 2\n",
+    "        sort(low, mid)\n",
+    "        sort(mid, high)\n",
+    "        merge(low, mid, high)\n",
+    "\n",
+    "    def merge(low, mid, high):\n",
+    "        temp = []\n",
+    "        l, h = low, mid\n",
+    "\n",
+    "        while l < mid and h < high:\n",
+    "            if arry[l] < arry[h]:\n",
+    "                temp.append(array[l])\n",
+    "                l += 1\n",
+    "            else:\n",
+    "                temp.append(array[h])\n",
+    "                h += 1\n",
+    "\n",
+    "        while l < mid:\n",
+    "            temp.append(array[l])\n",
+    "            l += 1\n",
+    "        while h < high:\n",
+    "            temp.append(array[h])\n",
+    "            h += 1\n",
+    "\n",
+    "        for i in range(low, high):\n",
+    "            array[i] = temp[i - low]\n",
+    "\n",
+    "    return sort(0, len(arry))\n",
+    "\n",
+    "\n",
+    "array = [0, 1, 9, 2, 8, 3, 7, 4, 6, 5]\n",
+    "merge_sort(array)\n",
+    "print(array)\n"
    ]
   }
  ],
