[Tech Knowledge][Array, ArrayList, LinkedList 의 차이점] 23-03-12

--- a/traning.ipynb
+++ b/traning.ipynb
@@ -1114,6 +1114,150 @@
     "merge_sort(array)\n",
     "print(array)\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 단일 연결 리스트(Singly Linked List)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "sll.getIndex(1) : 0\n",
+      "sll.getIndex(2) : 1\n",
+      "sll.getIndex(3) : 2\n",
+      "1->2->3\n",
+      "1->11->2->3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Node 클래스 선언\n",
+    "class Node (object):\n",
+    "    # 데이터만 인자로 전달 받고 Node 생성 시, next주소를 저장하지 않음\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.next = None\n",
+    "\n",
+    "# Singly Linked List 선언\n",
+    "class SinglyLinkedList(object):\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "        self.count = 0\n",
+    "\n",
+    "    # 연결 리스트 끝에 새 Node 추가\n",
+    "    def append(self, node):\n",
+    "        # Node 형태가 들어오지 않았을 경우 예외 처리\n",
+    "        try:\n",
+    "            if not isinstance(node, Node):\n",
+    "                raise\n",
+    "        except TypeError as e:\n",
+    "            print(f\"Type Error! {e}\")\n",
+    "\n",
+    "        # head : 생성된 연결 리스트의 제일 첫 Node\n",
+    "        # 첫 Node가 존재하지 않으면 입력 받은 node를 head에 추가\n",
+    "        if self.head == None:\n",
+    "            self.head = node\n",
+    "        else:\n",
+    "            current = self.head\n",
+    "            while current.next != None:\n",
+    "                current = current.next\n",
+    "            current.next = node\n",
+    "\n",
+    "    # 출력\n",
+    "    def __str__(self):\n",
+    "        current = self.head\n",
+    "        string = \"\"\n",
+    "\n",
+    "        while current:\n",
+    "            string += str(current.data)\n",
+    "            if current.next:\n",
+    "                string += \"->\"\n",
+    "            current = current.next\n",
+    "        return string\n",
+    "\n",
+    "    def getIndex(self, data):\n",
+    "        current = self.head\n",
+    "        index = 0\n",
+    "        while current:\n",
+    "            if current.data == data:\n",
+    "                return index\n",
+    "            current = current.next\n",
+    "            index += 1\n",
+    "\n",
+    "        return index\n",
+    "    \n",
+    "    # node를 원하는 index에 추가\n",
+    "    def insert(self, index, node):\n",
+    "        current = self.head\n",
+    "        prev = None\n",
+    "        current_index = 0\n",
+    "\n",
+    "        # index 0에 node 추가\n",
+    "        if index == 0:\n",
+    "            if current:\n",
+    "                next_node = current\n",
+    "                self.head = node\n",
+    "                self.head.next = next_node\n",
+    "            else:\n",
+    "                self.head = node\n",
+    "        \n",
+    "        else:\n",
+    "            while current_index < index:\n",
+    "                if current:\n",
+    "                    prev = current\n",
+    "                    current = current.next\n",
+    "                else:\n",
+    "                    break\n",
+    "                current_index += 1\n",
+    "            if current_index == index:\n",
+    "                node.next = current\n",
+    "                prev.next = node\n",
+    "            else:\n",
+    "                return -1\n",
+    "            \n",
+    "\n",
+    "# 현재 페이지 실행\n",
+    "if __name__ == \"__main__\":\n",
+    "    sll = SinglyLinkedList()\n",
+    "\n",
+    "    print(sll)\n",
+    "    sll.append(Node(1))\n",
+    "    sll.append(Node(2))\n",
+    "    sll.append(Node(3))\n",
+    "\n",
+    "    print(f'sll.getIndex(1) : {sll.getIndex(1)}')\n",
+    "    print(f'sll.getIndex(2) : {sll.getIndex(2)}')\n",
+    "    print(f'sll.getIndex(3) : {sll.getIndex(3)}')\n",
+    "    print(sll)\n",
+    "\n",
+    "    sll.insert(1, Node(11))\n",
+    "    print(sll)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
